# rust_storage

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
config/: default.toml
docs/: README.md  design.drawio
docs/docker/: README.md
docs/docker/config/: config_0.toml  config_1.toml  config_2.toml  config_3.toml  config_4.toml  config_5.toml
docs/jmeter/: README.md  storage.jmx
docs/shell/: reset.sh  start.sh
docs/shell/00/: default.toml
docs/shell/01/: default.toml
docs/shell/02/: default.toml
docs/shell/03/: default.toml
docs/shell/04/: default.toml
docs/shell/05/: default.toml
docs/shell/config/: 0.toml  1.toml  2.toml  3.toml  4.toml  5.toml
proto/: internalfiles.proto
src/: lib.rs  main.rs
src/config/: configs.rs  get_config.rs  mod.rs
src/handler/: common_handler.rs  file_grpc_handler.rs  file_handler.rs  mod.rs
src/middleware_fn/: log.rs
src/model/: file_model.rs
src/proto/: internalfiles.rs
src/service/: file_service.rs
src/storage/: mod.rs  rocksdb_storage.rs
src/util/: crypto.rs
