[package]
name = "rust_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
config = "0.13.3"
data-encoding = "2.3.3"
poem = {version = "1.3.55", features = ["server", "multipart"]}
ring = "0.16.20"
rocksdb = "0.20.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.94"
tokio = {version = "1.26", features = ["full"]}
