[package]
name = "rust_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
data-encoding = "2.3.3"
once_cell = "1.17.1"
poem = {version = "1.3.55", features = ["server", "multipart", "anyhow"]}
prost = "0.11.8"
rand = "0.8.5"
ring = "0.16.20"
rocksdb = "0.20.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.94"
tokio = {version = "1.26", features = ["full"]}
toml = "0.7.2"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
